package theory.behaviour.observer.withObserver;

public interface Display {

    void updateTemperature(float temperature);

    void showDisplay();
}
