@startuml

title __WITHOUTOBSERVER's Class Diagram__\n

  namespace theory.behaviour.observer.withoutObserver {
    interface theory.behaviour.observer.withoutObserver.Display {
        {abstract} + checkForLatestData()
        {abstract} + showDisplay()
    }
  }
  

  namespace theory.behaviour.observer.withoutObserver {
    class theory.behaviour.observer.withoutObserver.MainClass {
        {static} + main()
    }
  }
  

  namespace theory.behaviour.observer.withoutObserver {
    class theory.behaviour.observer.withoutObserver.PhoneDisplay {
        - currentTemperature : float
        + PhoneDisplay()
        + checkForLatestData()
        + showDisplay()
    }
  }
  

  namespace theory.behaviour.observer.withoutObserver {
    class theory.behaviour.observer.withoutObserver.TVDisplay {
        - currentTemperature : float
        + TVDisplay()
        + checkForLatestData()
        + showDisplay()
    }
  }
  

  namespace theory.behaviour.observer.withoutObserver {
    class theory.behaviour.observer.withoutObserver.WeatherMonitoringSystem {
        - temperature : float
        + getTemperature()
        + updateTemperature()
    }
  }
  

  theory.behaviour.observer.withoutObserver.PhoneDisplay .up.|> theory.behaviour.observer.withoutObserver.Display
  theory.behaviour.observer.withoutObserver.PhoneDisplay o-- theory.behaviour.observer.withoutObserver.WeatherMonitoringSystem : weatherMonitoringSystem
  theory.behaviour.observer.withoutObserver.TVDisplay .up.|> theory.behaviour.observer.withoutObserver.Display
  theory.behaviour.observer.withoutObserver.TVDisplay o-- theory.behaviour.observer.withoutObserver.WeatherMonitoringSystem : weatherMonitoringSystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
